--- a/src/main.scss
+++ b/src/main.scss
@@ -276,6 +276,15 @@ pre, code {
     }
 }
 
+.setTitle{
+    font-weight: bold;
+    padding: 0 15px 0 0;
+}
+.setDesc{
+    color: #999;
+}
+
+
 .footer {
 
 }
