--- a/src/styles/_bootstrap.scss
+++ b/src/styles/_bootstrap.scss
@@ -5,36 +5,36 @@
  */
 
 // Core variables and mixins
-@import "../../node_modules/bootstrap/scss/variables";
-@import "../../node_modules/bootstrap/scss/mixins";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/mixins";
 
 // Reset and dependencies
-@import "../../node_modules/bootstrap/scss/normalize";
-@import "../../node_modules/bootstrap/scss/print";
+@import "bootstrap/scss/normalize";
+@import "bootstrap/scss/print";
 
 // Core CSS
-@import "../../node_modules/bootstrap/scss/reboot";
-@import "../../node_modules/bootstrap/scss/type";
+@import "bootstrap/scss/reboot";
+@import "bootstrap/scss/type";
 //@import "../../node_modules/bootstrap/scss/images";
-@import "../../node_modules/bootstrap/scss/code";
-@import "../../node_modules/bootstrap/scss/grid";
-@import "../../node_modules/bootstrap/scss/tables";
+@import "bootstrap/scss/code";
+@import "bootstrap/scss/grid";
+@import "bootstrap/scss/tables";
 //@import "../../node_modules/bootstrap/scss/forms";
-@import "../../node_modules/bootstrap/scss/buttons";
+@import "bootstrap/scss/buttons";
 
 // Components
-//@import "../../node_modules/bootstrap/scss/animation";
-//@import "../../node_modules/bootstrap/scss/dropdown";
-//@import "../../node_modules/bootstrap/scss/button-group";
-//@import "../../node_modules/bootstrap/scss/input-group";
-//@import "../../node_modules/bootstrap/scss/custom-forms";
+//@import "bootstrap/scss/animation";
+//@import "bootstrap/scss/dropdown";
+//@import "bootstrap/scss/button-group";
+//@import "bootstrap/scss/input-group";
+//@import "bootstrap/scss/custom-forms";
 //@import "../../node_modules/bootstrap/scss/nav";
 //@import "../../node_modules/bootstrap/scss/navbar";
 //@import "../../node_modules/bootstrap/scss/card";
 //@import "../../node_modules/bootstrap/scss/breadcrumb";
 //@import "../../node_modules/bootstrap/scss/pagination";
 //@import "../../node_modules/bootstrap/scss/pager";
-@import "../../node_modules/bootstrap/scss/labels";
+@import "bootstrap/scss/labels";
 //@import "../../node_modules/bootstrap/scss/jumbotron";
 //@import "../../node_modules/bootstrap/scss/alert";
 //@import "../../node_modules/bootstrap/scss/progress";
@@ -50,7 +50,7 @@
 //@import "../../node_modules/bootstrap/scss/carousel";
 
 // Utility classes
-@import "../../node_modules/bootstrap/scss/utilities";
-@import "../../node_modules/bootstrap/scss/utilities-background";
-@import "../../node_modules/bootstrap/scss/utilities-spacing";
-@import "../../node_modules/bootstrap/scss/utilities-responsive";
+@import "bootstrap/scss/utilities";
+@import "bootstrap/scss/utilities-background";
+@import "bootstrap/scss/utilities-spacing";
+@import "bootstrap/scss/utilities-responsive";
